--- a/Android/app/src/main/res/layout/activity_help.xml
+++ b/Android/app/src/main/res/layout/activity_help.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="@string/helpPageText"
-        android:textSize="20sp"/>
+        android:textSize="22sp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
