--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/connect_btn"
-        android:layout_margin="15dp" />
+        android:layout_marginBottom="30dp" />
 
 
     <Button
