--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -14,18 +14,16 @@
         android:layout_height="wrap_content"
         android:text="@string/connect_btn"
         android:layout_marginBottom="30dp" />
-
-    <Button
-        android:id="@+id/helpPageBtn"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="@string/help_page_btn"
-        android:layout_marginBottom="30dp" />
-
     <Button
         android:id="@+id/photoBtn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="@string/photo_btn" />
+        android:text="@string/photo_btn"
+        android:layout_marginBottom="30dp"/>
+    <Button
+        android:id="@+id/helpPageBtn"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="@string/help_page_btn" />
 
 </LinearLayout>
