--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -23,4 +23,18 @@
     <color name="red">#e94f4f</color>
     <color name="brown">#4e342e</color>
     <color name="yellow">#f8eee6</color>
+    <color name="primary">#38be55</color>
+    <color name="primary_dark">#2da346</color>
+    <color name="primary_darker">#088A29</color>
+    <color name="accent">#FFFFFF</color>
+
+    <color name="jet">#222222</color>
+    <color name="oil">#333333</color>
+    <color name="monsoon">#777777</color>
+    <color name="jumbo">#888888</color>
+    <color name="aluminum">#999999</color>
+    <color name="base">#AAAAAA</color>
+    <color name="iron">#CCCCCC</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
