--- a/Android/app/src/main/res/layout/activity_signup.xml
+++ b/Android/app/src/main/res/layout/activity_signup.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
-            android:text="Robot Telepresence"
+            android:text="@string/app_name"
             android:textSize="28sp"
             android:layout_gravity="center_horizontal" />
 
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:hint="Username" />
+                android:hint="@string/user_name" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Name Label -->
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:hint="First Name" />
+                android:hint="@string/first_name" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Name Label -->
@@ -57,9 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:hint="Last Name" />
+                android:hint="@string/last_name" />
         </android.support.design.widget.TextInputLayout>
-
 
         <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
@@ -71,7 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="@string/email" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
@@ -84,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="@string/password"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Re-enter Label -->
@@ -97,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Re-enter Password"/>
+                android:hint="@string/reenter_password"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Signup Button -->
@@ -108,13 +107,13 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Create Account"/>
+            android:text="@string/create_account"/>
 
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="Already a member? Login"
+            android:text="@string/already_a_member_login"
             android:gravity="center"
             android:textSize="16dip"/>
 
