Handle Android UI When Back Button is clicked

--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="72dp"
+            android:textColor="@color/black"
             android:layout_marginBottom="24dp"
             android:text="@string/app_name"
             android:textSize="28sp"
@@ -48,17 +49,19 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
             android:padding="12dp"
-            android:text="@string/login"/>
+            android:text="@string/login" />
 
         <TextView android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
+            android:textColor="@color/green"
             android:text="@string/no_account_yet_create_one"
             android:gravity="center"
             android:textSize="16dip"/>
