--- a/Android/app/src/main/res/layout/activity_signup.xml
+++ b/Android/app/src/main/res/layout/activity_signup.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
+            android:textColor="@color/black"
             android:text="@string/app_name"
             android:textSize="28sp"
             android:layout_gravity="center_horizontal" />
@@ -102,16 +103,18 @@
         <!-- Signup Button -->
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_signup"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
             android:padding="12dp"
-            android:text="@string/create_account"/>
+            android:text="@string/create_account" />
 
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/green"
             android:layout_marginBottom="24dp"
             android:text="@string/already_a_member_login"
             android:gravity="center"
