--- a/Android/app/src/main/res/layout/activity_game.xml
+++ b/Android/app/src/main/res/layout/activity_game.xml
@@ -5,11 +5,22 @@
     android:orientation="horizontal"
     android:fitsSystemWindows="true">
 
-    <ImageView
-        android:id="@+id/hang_img"
-        android:layout_width="150dp"
-        android:layout_height="250dp"
-        android:src="@drawable/hang7"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/hang_img"
+            android:layout_width="150dp"
+            android:layout_height="250dp"
+            android:src="@drawable/hang7"/>
+        <Chronometer
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/stopwatch"
+            android:textSize="22dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <LinearLayout
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
@@ -214,7 +225,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"/>
-    </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <Button
+                android:text="sound"
+                android:id="@+id/sound_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <Button
+                android:text="vibration"
+                android:id="@+id/vibrationBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <Button
+                android:text="music"
+                android:id="@+id/musicBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <Button
+                android:text="pop"
+                android:id="@+id/popBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
