--- a/Android/app/src/main/res/layout/activity_game.xml
+++ b/Android/app/src/main/res/layout/activity_game.xml
@@ -28,6 +28,12 @@
         android:orientation="vertical"
         android:gravity="center_horizontal">
         <TextView
+            android:id="@+id/pepper_text"
+            android:text="PepperId"
+            android:textSize="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
             android:id="@+id/hint_text"
             android:text="Hint"
             android:textSize="20dp"
