--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="primary_dark">#2da346</color>
     <color name="primary_darker">#088A29</color>
     <color name="accent">#FFFFFF</color>
+    <color name="lightpink">#FFC0CB</color>
 
     <color name="jet">#222222</color>
     <color name="oil">#333333</color>
