Added Proactive respond on Android

--- a/Android/app/src/main/res/layout/activity_game.xml
+++ b/Android/app/src/main/res/layout/activity_game.xml
@@ -53,7 +53,7 @@
             android:id="@+id/answer_text"
             android:text="_ _ _ _ _"
             android:textSize="45dp"
-            android:textColor="@color/lightpink"
+            android:textColor="@color/pink_light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"/>
@@ -68,63 +68,63 @@
                 android:layout_height="wrap_content">
                 <Button
                     android:id="@+id/btnA"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="A"/>
                 <Button
                     android:id="@+id/btnB"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="B"/>
                 <Button
                     android:id="@+id/btnC"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="C"/>
                 <Button
                     android:id="@+id/btnD"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="D"/>
                 <Button
                     android:id="@+id/btnE"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="E"/>
                 <Button
                     android:id="@+id/btnF"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="F"/>
                 <Button
                     android:id="@+id/btnG"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="G"/>
                 <Button
                     android:id="@+id/btnH"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="H"/>
                 <Button
                     android:id="@+id/btnI"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
@@ -137,56 +137,56 @@
                 android:layout_gravity="center_horizontal">
                 <Button
                     android:id="@+id/btnJ"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="J"/>
                 <Button
                     android:id="@+id/btnK"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="K"/>
                 <Button
                     android:id="@+id/btnL"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="L"/>
                 <Button
                     android:id="@+id/btnM"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="M"/>
                 <Button
                     android:id="@+id/btnN"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="N"/>
                 <Button
                     android:id="@+id/btnO"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="O"/>
                 <Button
                     android:id="@+id/btnP"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="P"/>
                 <Button
                     android:id="@+id/btnQ"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
@@ -198,63 +198,63 @@
                 android:layout_height="wrap_content">
                 <Button
                     android:id="@+id/btnR"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="R"/>
                 <Button
                     android:id="@+id/btnS"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="S"/>
                 <Button
                     android:id="@+id/btnT"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="T"/>
                 <Button
                     android:id="@+id/btnU"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="U"/>
                 <Button
                     android:id="@+id/btnV"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="V"/>
                 <Button
                     android:id="@+id/btnW"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="W"/>
                 <Button
                     android:id="@+id/btnX"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="X"/>
                 <Button
                     android:id="@+id/btnY"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
                     android:text="Y"/>
                 <Button
                     android:id="@+id/btnZ"
-                    android:background="@color/lightpink"
+                    android:background="@color/pink_light"
                     android:layout_width="@dimen/keyboard_size"
                     android:layout_height="@dimen/keyboard_size"
                     android:layout_margin="@dimen/keyboard_margin"
