--- a/Android/app/src/main/res/layout/activity_game_result.xml
+++ b/Android/app/src/main/res/layout/activity_game_result.xml
@@ -3,23 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="#FFE4E1"
+    android:background="@color/white"
     android:layout_gravity="center_vertical"
     android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/result_text"
-        android:layout_gravity="center"
-        android:layout_marginLeft="50dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#FF69B4"
-        android:text="Result"
-        android:textSize="50dp" />
 
     <ImageView
         android:id="@+id/result_image"
-        android:layout_width="497dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/happy_android" />
