--- a/Android/app/src/main/res/layout/activity_request_game.xml
+++ b/Android/app/src/main/res/layout/activity_request_game.xml
@@ -7,12 +7,15 @@
     android:fitsSystemWindows="true">
 
     <TextView
-        android:padding="30dp"
         android:textSize="18dp"
         android:text="@string/please_enter_the_word_and_hint_for_pepper_to_start_the_game"
+        android:textColor="@color/green"
+        android:layout_gravity="center_horizontal"
+        android:padding="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:layout_marginTop="20dp"
         android:text="@string/hint"
         android:textSize="15dp"
         android:layout_width="wrap_content"
@@ -30,10 +33,12 @@
         android:id="@+id/word_edit"
         android:layout_width="200dp"
         android:layout_height="wrap_content" />
-    <Button
+    <android.support.v7.widget.AppCompatButton
+        style="@style/Widget.AppCompat.Button.Colored"
         android:id="@+id/sendBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="@string/send"/>
     
 </LinearLayout>
